# Chunk-Norris

./: docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml  server.py
backend/app/: __init__.py  extensions.py
backend/app/common/: errors.py  utility.py
backend/app/models/: __init__.py  base.py  file.py
backend/app/routes/: __init__.py  examples.py
backend/config/: __init__.py
